Trying to fix iOS white space

--- a/src/css/hack.css
+++ b/src/css/hack.css
@@ -20,6 +20,8 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
